# TEngineOld

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  LICENCE.md  README.md  conanfile.py  conanfile.txt  luajit.py  notes  remotes.txt
Code/Base/TECore/: CMakeLists.txt
Code/Base/TECore/IO/: TEDatFile.h  (+15 more)
Code/Base/TEPhysics/: CMakeLists.txt
Code/Base/TEPlatform/: CMakeLists.txt  TEPlatformWindowIncludes.h
Code/Base/TERendering/: CMakeLists.txt
Code/Executables/FightSpace/: CMakeLists.txt  main.cpp  main.h
Code/Executables/Playground/: AssetImporterTest.cpp  CMakeLists.txt  NetworkTest.cpp  NetworkTest.h  RandomTesting.cpp  TEAssetImporter.cpp  TEAssetImporter.h  main.cpp
Code/Executables/TEngineEditor/: CMakeLists.txt  ConvertMeshFormatWidget.cpp  ConvertMeshFormatWidget.h  DatFileManagerWidget.cpp  DatFileManagerWidget.h  DatFileModel.cpp  DatFileModel.h  TERenderWidget.cpp  TERenderWidget.h  TEngineEditor.cpp  TEngineEditor.h  main.cpp  main.h
Code/Executables/Testing/: AssetImporterTest.cpp  AssetImporterTest.h  CMakeLists.txt  NetworkTest.cpp  RandomTesting.cpp  RandomTesting.h  TEAssetImporter.cpp  TEAssetImporter.h  main.cpp  main.h
Code/FightSpace/: CMakeLists.txt  main.cpp  main.h
Code/TECore/: CMakeLists.txt
Code/TECore/IO/: TEDatFile.cpp  TEDatFile.h  TEDatFileIO.cpp  TEDatPath.cpp  TEDatPath.h  TEFile.cpp  TEFileIO.h  TEFileLoader.h  TEFileSystemIO.cpp  TEJson.h
Code/TECore/Images/: TEImage.h  TEImagePNG.cpp  TEImagePNG.h
Code/TECore/Intersection/: TEBSphere.cpp  TEBSphere.h  TEContactSet.h  TEObbObbCollider.cpp  TEObbObbCollider.h  TEPlane.h  TESpherePlaneCollider.cpp  TESphereSphereCollider.cpp  TESphereSphereCollider.h
Code/TECore/Lua/: TELuaBaseFunction.h  TELuaClass.cpp  TELuaClass.h  TELuaClassFunction.cpp  TELuaClassFunction.h  TELuaConstructor.cpp  TELuaConstructor.h  TELuaDestructor.h  TELuaExtended.cpp  TELuaExtended.h  TELuaFunction.cpp  TELuaFunction.h  TELuaHelpers.cpp  TELuaHelpers.h  TELuaNative.h  TELuaRef.cpp  TELuaRef.h  TELuaStackReseter.h  TELuaState.cpp  TELuaState.h  TELuaTable.cpp  TELuaTable.h  TELuaVariable.cpp  TELuaVariable.h
Code/TECore/Math/: TEMathBase.cpp  TEMathBase.h  TEMatrix3D.cpp  TEMatrix3D.h  TEMatrix4D.cpp  TEMatrix4D.h  TEQuaternion.cpp  TEQuaternion.h  TETransform.h  TEVector2D.cpp  TEVector2D.h  TEVector3D.cpp  TEVector3D.h
Code/TECore/Network/: TEAddress.h  TEClient.cpp  TEClient.h  TEConnection.h  TEPacket.h  TEReliabilityControl.h  TEReliableConnection.cpp  TEServer.cpp  TEServer.h  TESocket.h
Code/TECore/Resources/: TECrypto.h  TEResourceHandle.h  TETextureLoaderPNG.cpp
Code/TECore/Threading/: TELockQue.h  TEThreadJoiner.h  TEThreadPool.h  TEWorkStealingQue.cpp  TEWorkStealingQue.h
Code/TECore/Utils/: TEColor.h  TEDataTypes.h  TETimer.cpp  TETimer.h  TETypeid.h  TEValue.cpp  TEValue.h  TEVariant.h
Code/TEGameSystem/: CMakeLists.txt  TEActorObject.cpp  TEActorObject.h  TEGameScene.h  TEGameSystem.cpp  TEGameTask.cpp  TEGameTask.h
Code/TEGraphicsSystem/: CMakeLists.txt  TECameraObject.cpp  TECameraObject.h  TEGraphicsObject.cpp  TEGraphicsScene.h  TEGraphicsSystem.h  TEGraphicsTask.cpp  TEGraphicsTask.h  TERenderableObject.cpp  TERenderableObject.h
Code/TENetworkSystem/: CMakeLists.txt  TEMessageHandler.h  TENetworkManager.cpp  TENetworkManager.h  TENetworkObject.cpp  TENetworkObject.h  TENetworkScene.cpp  TENetworkSystem.h  TENetworkTask.cpp
Code/TEPhysics/: CMakeLists.txt
Code/TEPhysics/Collision/: TEBVH.cpp  TEBoundingVolumeCommon.h  TECollisionComponent.cpp  TEPotentialContact.h
Code/TEPhysics/Physics/: TEPhysicsComponent.h
Code/TEPhysicsSystem/: CMakeLists.txt  TEPhysicsObject.h
Code/TEPlatform/: CMakeLists.txt  TEPlatformWindowIncludes.h
Code/TEPlatform/InputMapping/: TEActionExecutor.cpp  TEActionExecutor.h  TEInput.cpp  TEInput.h  TEInputContext.cpp  TEInputMapper.cpp  TERange.cpp  TERangeExecutor.cpp  TERangeExecutor.h  TEState.h  TEStateExecutor.cpp  TEStateExecutor.h
Code/TEPlatform/Linux/: TELinuxWindow.cpp  TELinuxWindow.h
Code/TEPlatform/Win/: TEWinWindow.cpp
Code/TERendering/: CMakeLists.txt
Code/TERendering/Context/: TEApiContextIncludes.h  TEContextLinuxOpenGL.cpp  TEContextLinuxOpenGL.h  TEContextWinDX11.cpp  TEContextWinDX11.h  TEContextWinOpenGL.cpp  TEContextWinOpenGL.h
Code/TERendering/Renderer/: TEApiResourcesIncludes.h  TERenderer.cpp  TERenderer.h  TEShaderParameter.cpp  TEShaderParameter.h
Code/TERendering/SceneGraph/: TECamera.cpp  TECamera.h  TECameraNode.cpp  TECullState.h  TEFogState.h  TEGlobalState.h  TELight.h  TELightNode.cpp  TELightNode.h  TEMaterialState.h  TENode.cpp  TERenderable.h  TESceneManager.cpp  TEWireframe.h  TEZBufferState.h
Code/TETransformSystem/: CMakeLists.txt  TETransformObject.cpp  TETransformObject.h  TETransformScene.cpp
Code/TEngine/: CMakeLists.txt
Code/TEngine/Engine/: CMakeLists.txt  TEEngine.cpp  TEEngine.h  TEEnvironment.cpp  TEEnvironment.h  TESceneHandler.cpp  TESceneHandler.h  TEScheduler.cpp  TEScheduler.h  TEUniversalObject.cpp  TEUniversalObject.h  TEUniversalScene.cpp  TEUniversalScene.h
Code/TEngine/Event/: CMakeLists.txt  TEEventHandler.cpp  TEEventHandler.h  TEEventManager.cpp  TEEventManager.h  TEQuedEvent.h
Code/TEngine/LuaInterface/: CMakeLists.txt  TELuaInterface.cpp  TELuaInterface.h
Code/ThreadedSystems/TEGameSystem/: CMakeLists.txt  TEActorObject.cpp  TEActorObject.h  TEGameScene.cpp  TEGameScene.h  TEGameSystem.cpp  TEGameSystem.h  TEGameTask.cpp  TEGameTask.h  TESpawnerObject.cpp  TESpawnerObject.h
Code/ThreadedSystems/TEGraphicsSystem/: CMakeLists.txt  TECameraObject.cpp  TECameraObject.h  TEGraphicsObject.cpp  TEGraphicsObject.h  TEGraphicsScene.cpp  TEGraphicsScene.h  TEGraphicsSystem.cpp  TEGraphicsSystem.h  TEGraphicsTask.cpp  TEGraphicsTask.h  TERenderableObject.cpp  TERenderableObject.h
Rubish/TEInputSystem/: CMakeLists.txt  TEActions.cpp  TEActions.h  TEInputMapper.h  TEInputObject.cpp  TEInputObject.h  TEInputProperties.cpp  TEInputProperties.h  TEInputScene.cpp  TEInputScene.h  TEInputSystem.cpp  TEInputSystem.h  TEInputTask.cpp  TEInputTask.h
(+499 files in other folders)
